gateway/1.3/modules/ROOT/pages/_partials/task-config-logs-third-party.adoc
//tag::intro1[]
Anypoint Flex Gateway enables you to configure log output for consumption by third-party services such as https://www.splunk.com/[Splunk^]. You configure log output via a custom YAML file.

//end::intro1[]
//tag::intro2[]
The following steps demonstrate how to redirect Flex Gateway logs to Splunk.
//end::intro2[]
//tag::icon-table[]

[cols="1a,1a,1a"]
|===
|image:install-linux-logo.png[20%,20%,xref="#linux-service"]
|image:install-docker-logo.png[25%,25%,xref="#docker-container"]
|image:install-kubernetes-logo.png[20%,20%,xref="#kubernetes-ingress-controller"]

|<<linux-service,Configure Log Output for Flex Gateway as a Linux Service>>
|<<docker-container,Configure Log Output for Flex Gateway in a Docker Container>>
|<<kubernetes-ingress-controller,Configure Log Output for Flex Gateway as a Kubernetes Ingress Controller>>
|===

//end::icon-table[]
//tag::byb[]

== Before You Begin

Before configuring Flex Gateway log output for Splunk, complete the following tasks:

* xref:flex-install.adoc[Install Flex Gateway]
* xref:flex-{page-mode}-reg-run.adoc[Register and Run Flex Gateway]

Additionally, ensure that you have:

* A running https://www.splunk.com/[Splunk^] service. You can test Splunk by setting up a free Splunk Cloud trial.
* Added an HTTP Event Collector (HEC) data input to the Cloud or Enterprise Splunk service. See the https://docs.splunk.com/Documentation/Splunk/7.0.3/Data/UsetheHTTPEventCollector[Splunk documentation^] about how to add a data input, and how to create an HEC token.

//end::byb[]
//tag::linux[]

[[linux-service]]
== Configure Log Output for Flex Gateway as a Linux Service

. Create a folder in the `/etc/mulesoft/flex-gateway/conf.d` directory and name it `custom`:
+
[source,ssh]
----
sudo mkdir /etc/mulesoft/flex-gateway/conf.d/custom
----

. Create a YAML configuration file in the `custom` folder:
+
[source,ssh]
----
sudo touch /etc/mulesoft/flex-gateway/conf.d/custom/logs-splunk-config.yaml
----

. Update the file with your Splunk configuration details. For example:
+
[source,ssh]
----
sudo vi /etc/mulesoft/flex-gateway/conf.d/custom/logs-splunk-config.yaml
----
+
//end::linux[]
//tag::docker-intro[]

[[docker-container]]
== Configure Log Output for Flex Gateway in a Docker Container

NOTE: If you have already added a volume for a folder with your
Flex Gateway configuration files, go to the last step.

. Stop your Flex Gateway and any replicas, using Ctrl+C.
. Create a folder in the directory with your Flex Gateway configuration files and name it `app`.
. Restart your Flex Gateway with an additional volume for the new `app` directory:
//end::docker-intro[]

//tag::docker-config-file-step[]
. Create and save a YAML configuration file in your `app` folder with your shared storage details.
+
//end::docker-config-file-step[]
//tag::k8s[]

[[kubernetes-ingress-controller]]
== Configure Log Output for Flex Gateway as a Kubernetes Ingress Controller

To configure shared storage for Flex Gateway, create a new resource using
a YAML configuration file with your Splunk details.

//end::k8s[]

//tag::sample-config-all-intro[]
The following `Configuration` resource defines Splunk output:
//end::sample-config-all-intro[]

//tag::sample-config-all[]
[source,yaml]
----
apiVersion: gateway.mulesoft.com/v1alpha1
kind: Configuration
metadata:
  name: metrics-config
spec:
  logging:
    outputs:
    - name: splunk
      type: splunk
      parameters:
        host: <instance-name>.splunkcloud.com
        port: "8088"
        splunk_token: <Splunk's HEC token>
        tls: "on"
        tls.verify: "off"
    runtimeLogs:
      logLevel: info
      outputs: [splunk]
    accessLogs:
      outputs: [splunk]
----

Splunk will be begin ingesting logs soon after applying this resource. If no events appear in the Splunk dashboard, inspect the Flex Gateway `flex-gateway-fluentbit` logs to determine if there are configuration errors.
//end::sample-config-all[]